Changing Sequencer color space repeatedly changes movie strip's display gamma #39472

Closed
opened 2014-03-27 22:16:26 +01:00 by John Cox · 6 comments

System Information
Mac OS X 1.9.2 AMD Radeon HD 6750M 1024 MB

Blender Version
Broken: 2.70 19e627c
Worked: (optional)

Short description of error
Changing the Sequencer color space affects the display of a movie strip

Exact steps for others to reproduce the error
Open attached SequencerColorSpace.blend
In the Color Management panel, change Sequencer Color Space from sRGB to VD16 and back again
makes the Movie strip brighter. The strip keeps getting brighter each time the color space is switched to
VD16 and back again. Only the displayed frame is affected. The rest of the strip looks fine.

SequencerColorSpace.blend

**System Information** Mac OS X 1.9.2 AMD Radeon HD 6750M 1024 MB **Blender Version** Broken: 2.70 19e627c Worked: (optional) **Short description of error** Changing the Sequencer color space affects the display of a movie strip **Exact steps for others to reproduce the error** Open attached SequencerColorSpace.blend In the Color Management panel, change Sequencer Color Space from sRGB to VD16 and back again makes the Movie strip brighter. The strip keeps getting brighter each time the color space is switched to VD16 and back again. Only the displayed frame is affected. The rest of the strip looks fine. [SequencerColorSpace.blend](https://archive.blender.org/developer/F83052/SequencerColorSpace.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnCox-3

Added subscriber: @JohnCox-3

This issue was referenced by blender/blender-addons-contrib@6babbf59bc

This issue was referenced by blender/blender-addons-contrib@6babbf59bcd297213305bd285be2171fc16e9613

This issue was referenced by 6babbf59bc

This issue was referenced by 6babbf59bcd297213305bd285be2171fc16e9613

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6babbf59bc.

Closed by commit 6babbf59bc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39472
No description provided.