Fix T39472: Changing Sequencer color space repeatedly changes movie strip's display gamma

Issue was caused by the old color space settings being lurking around
seq->anim after the changes in color space settings.